exports[`network > network_list_requests > list requests form current navigations only 1`] = `
## Network requests
Showing 1-1 of 1 (Page 1 of 1).
reqid=3 GET http://127.0.0.1:<port>/three [200]
`;

exports[`network > network_list_requests > list requests from previous navigations 1`] = `
## Network requests
Showing 1-3 of 3 (Page 1 of 1).
reqid=1 GET http://127.0.0.1:<port>/one [200]
reqid=2 GET http://127.0.0.1:<port>/two [200]
reqid=3 GET http://127.0.0.1:<port>/three [200]
`;

exports[`network > network_list_requests > list requests from previous navigations from redirects 1`] = `
## Network requests
Showing 1-3 of 3 (Page 1 of 1).
reqid=1 GET http://127.0.0.1:<port>/redirect [302]
reqid=2 GET http://127.0.0.1:<port>/redirected [200]
reqid=3 GET http://127.0.0.1:<port>/redirected-page [200]
`;
